--- a/hackathon_qc.ipynb
+++ b/hackathon_qc.ipynb
@@ -219,19 +219,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "894 subjects were successful and 378 subjects had missing data.\n",
+      "902 subjects were successful and 370 subjects had missing data.\n",
       "{'DICE': {'FSL-FreeSurfer': 0.0},\n",
-      " 'discrepancy': {'ASHS-FreeSurfer': 581.3000000000002,\n",
-      "                 'FSL-ASHS': 2729.0,\n",
-      "                 'FSL-FreeSurfer': 3310.3,\n",
-      "                 'avg': 2206.866666666667},\n",
       " 'filename': 'sub-6852929_ses-NAPBL00_run-001_T1w.nii.gz',\n",
       " 'mriqc': {'cjv': 0.4589474686328697,\n",
       "           'cnr': 2.8183498405824587,\n",
@@ -340,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -392,14 +388,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "792 subjects were successful and 102 subjects were excluded.\n"
+      "799 subjects were successful and 103 subjects were excluded.\n"
      ]
     }
    ],
@@ -453,19 +449,21 @@
     "print('observations shape = ', observations.shape)\n",
     "\n",
     "target = {}\n",
-    "target['discrepancy'] = {}\n",
-    "for discrepancy_key in data['discrepancy']:\n",
-    "    y = list()\n",
-    "    for data in list_of_mriqc:\n",
-    "        y.append(data['discrepancy'][discrepancy_key])\n",
-    "    target['discrepancy'][discrepancy_key] = np.array(y)\n",
+    "if 'discrepancy' in data:\n",
+    "    target['discrepancy'] = {}\n",
+    "    for discrepancy_key in data['discrepancy']:\n",
+    "        y = list()\n",
+    "        for data in list_of_mriqc:\n",
+    "            y.append(data['discrepancy'][discrepancy_key])\n",
+    "        target['discrepancy'][discrepancy_key] = np.array(y)\n",
     "\n",
-    "target['DICE'] = {}\n",
-    "for DICE_key in data['DICE']:\n",
-    "    y = list()\n",
-    "    for data in list_of_mriqc:\n",
-    "        y.append(data['DICE'][DICE_key])\n",
-    "    target['DICE'][DICE_key] = np.array(y)\n",
+    "if 'DICE' in data:\n",
+    "    target['DICE'] = {}\n",
+    "    for DICE_key in data['DICE']:\n",
+    "        y = list()\n",
+    "        for data in list_of_mriqc:\n",
+    "            y.append(data['DICE'][DICE_key])\n",
+    "        target['DICE'][DICE_key] = np.array(y)\n",
     "\n",
     "print('target shape = ', target['DICE']['FSL-FreeSurfer'].shape)"
    ]
